--- a/clusters/argo-demo/helmreleases/argo.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/argo.helm-release.yaml
@@ -1,21 +1,21 @@
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: argo-rollouts
-#   namespace: argo-rollouts
-# spec:
-#   interval: 10m
-#   chart:
-#     spec:
-#       chart: argo-rollouts
-#       version: 2.17.0
-#       sourceRef:
-#         kind: HelmRepository
-#         name: argo
-#         namespace: flux-system
-#       interval: 10m
-#   values:
-#     installCRDs: true
-#     dashboard:
-#       enabled: false
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: argo-rollouts
+  namespace: argo-rollouts
+spec:
+  interval: 10m
+  chart:
+    spec:
+      chart: argo-rollouts
+      version: 2.17.0
+      sourceRef:
+        kind: HelmRepository
+        name: argo
+        namespace: flux-system
+      interval: 10m
+  values:
+    installCRDs: true
+    dashboard:
+      enabled: false
