--- a/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     image:
       repository: quay.io/heubeck/examiner
       pullPolicy: IfNotPresent
-      tag: "1.6.2"
+      tag: "1.6.4"
     service:
       type: NodePort
       port: 80
@@ -38,6 +38,6 @@ spec:
       maxReplicas: 5
       targetCPUUtilizationPercentage: 80
     configuration: 
-        ECHO_VALUE: ⛈ ARGO Rockssss🤘
+        ECHO_VALUE: ⛈ ARGO Rocks again🤘
         SERVER_ERROR_RATE: 0
         REQUEST_DELAY: 100..250
