Updated chart reference

--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 10m
   chart:
     spec:
-      chart: prometheus-community/kube-prometheus-stack
+      chart: kube-prometheus-stack
       version: 39.6.0
       sourceRef:
         kind: HelmRepository
