--- a/charts/examiner/templates/service.yaml
+++ b/charts/examiner/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "name-stable" . }}
+  name: {{ include "name" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
