--- a/charts/examiner/templates/http.analysis.yaml
+++ b/charts/examiner/templates/http.analysis.yaml
@@ -10,7 +10,7 @@ spec:
     successCondition: "true"
     provider:
       web:
-        url: "http://examiner-stable.canary-demo"
+        url: "http://examiner-canary.canary-demo"
         timeoutSeconds: 20 # defaults to 10 seconds
   
   
