New release / failures

--- a/charts/examiner/templates/http.analysis.yaml
+++ b/charts/examiner/templates/http.analysis.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   metrics:
   - name: httpsuccessrate
-    failureLimit: 1
+    failureLimit: {{ .Values.FAILURE_LIMIT }}
     interval: 1s
     successCondition: "true"
     provider:
