--- a/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
@@ -39,5 +39,6 @@ spec:
       targetCPUUtilizationPercentage: 80
     configuration: 
         ECHO_VALUE: ⛈ ARGO Rocks again🤘
-        SERVER_ERROR_RATE: 0
+        SERVER_ERROR_RATE: 10
         REQUEST_DELAY: 100..250
+        FAILURE_LIMIT: 50%
