--- a/charts/examiner/templates/service.ingress.yaml
+++ b/charts/examiner/templates/service.ingress.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: examiner.test.local
+    http:
       paths:
       - path: /
         pathType: Prefix
