Added ingress for prometheus

--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -25,3 +25,16 @@ spec:
         port: 30005
       adminUser: admin
       adminPassword: admin
+      ingress:
+        enabled: true
+        hosts:
+        - host: prometheus.local
+          http:
+            paths:
+            - path: /
+              pathType: Prefix
+              backend:
+                service:
+                  name: {{ include "name" . }}
+                  port:
+                    number: 80
