Updated service name

--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -35,6 +35,6 @@ spec:
               pathType: Prefix
               backend:
                 service:
-                  name: {{ include "name" . }}
+                  name: prometheus-grafana
                   port:
                     number: 80
