--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -27,6 +27,6 @@ spec:
       adminPassword: admin
       ingress:
         enabled: true
-        hosts: |
+        hosts: 
           - prometheus.test.local
         path: /
