--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -30,3 +30,5 @@ spec:
         hosts: 
           - prometheus.test.local
         path: /
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
