--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -4,10 +4,6 @@ kind: HelmRelease
 metadata:
   name: ingress-nginx
   namespace: ingress-nginx
-  annotations:
-    prometheus.io/scrape: "true"
-    prometheus.io/port: "9113"
-    prometheus.io/scheme: http
 spec:
   interval: 10m
   chart:
@@ -24,3 +20,8 @@ spec:
       replicaCount: 1
       metrics:
         enabled: true
+      service:
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/port: "9113"
+          prometheus.io/scheme: http
