Readded metrics service for nginx

--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -18,12 +18,9 @@ spec:
   values:
     controller:
       replicaCount: 1
-      # metrics:
-      #   enabled: true
-        # service:
-        #   annotations:
-        #     prometheus.io/scrape: "true"
-        #     prometheus.io/port: "10254"
-        #     prometheus.io/scheme: http
+      metrics:
+        enabled: true
+        serviceMonitor:
+          enabled: true
     prometheus:
       create: true
