--- a/clusters/argo-demo/service-monitors/ingress-nginx.service-monitor.yaml
+++ b/clusters/argo-demo/service-monitors/ingress-nginx.service-monitor.yaml
@@ -2,6 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
+  name: ingress-ngninx-service-monitor
   labels:
     app: kubernetes-ingress
     name: ingress-nginx-controller-metrics
