Updated prometheus to detect servicemonitors everywhere

--- a/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/prometheus.helm-release.yaml
@@ -43,3 +43,6 @@ spec:
         path: /
         annotations:
           kubernetes.io/ingress.class: "nginx"
+      prometheusSpec:
+        podMonitorSelectorNilUsesHelmValues: false
+        serviceMonitorSelectorNilUsesHelmValues: false
