--- a/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
@@ -5,6 +5,10 @@ metadata:
   name: examiner
   namespace: canary-demo
 spec:
+  prometheusAnalysis:
+    enabled: true
+  httpAnalysis:
+    enabled: false
   releaseName: examiner
   chart:
     spec:
@@ -19,7 +23,7 @@ spec:
     image:
       repository: quay.io/heubeck/examiner
       pullPolicy: IfNotPresent
-      tag: "1.6.3"
+      tag: "1.6.4"
     service:
       type: NodePort
       port: 80
@@ -39,6 +43,6 @@ spec:
       targetCPUUtilizationPercentage: 80
     configuration: 
         ECHO_VALUE: ⛈ ARGO Rocks again🤘
-        SERVER_ERROR_RATE: 10
+        SERVER_ERROR_RATE: 0
         REQUEST_DELAY: 100..250
         FAILURE_LIMIT: 50%
