--- a/charts/examiner/templates/http.analysis.yaml
+++ b/charts/examiner/templates/http.analysis.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.httpAnalysis.enabled true }}
+{{- if eq ((.Values.httpAnalysis).enabled) true }}
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
