--- a/charts/examiner/templates/prometheus.analysis.yaml
+++ b/charts/examiner/templates/prometheus.analysis.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.prometheusAnalysis.enabled true }}
+{{- if eq ((.Values.prometheusAnalysis).enabled) true }}
 apiVersion: argoproj.io/v1alpha1
 kind: AnalysisTemplate
 metadata:
