--- a/clusters/argo-demo/helmreleases/loki.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/loki.helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: loki-distributed
+      chart: grafana/loki-distributed
       version: 2.14.1
       sourceRef:
         kind: HelmRepository
