--- a/clusters/argo-demo/helmreleases/loki.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/loki.helm-release.yaml
@@ -8,11 +8,11 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: grafana/loki-distributed
+      chart: grafana/loki
       version: 2.14.1
       sourceRef:
         kind: HelmRepository
-        name: loki-distributed
+        name: loki
         namespace: flux-system
       interval: 1m
   values:
