--- a/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
@@ -17,4 +17,4 @@ spec:
       interval: 1m
   values:
     clients:
-      url: 'http://loki.loki:3100/loki/api/v1/push'
+      url: http://loki.loki:3100/loki/api/v1/push
