Added label to trigger new release

--- a/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
@@ -18,3 +18,5 @@ spec:
   values:
     clients:
       url: http://loki.loki:3100/loki/api/v1/push
+      external_labels:
+        cluster: argo-demo
