Fixed clients array

--- a/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/promtail.helm-release.yaml
@@ -17,6 +17,6 @@ spec:
       interval: 1m
   values:
     clients:
-      url: http://loki.loki:3100/loki/api/v1/push
-      external_labels:
-        cluster: argo-demo
+      - url: http://loki.loki:3100/loki/api/v1/push
+        external_labels:
+          cluster: argo-demo
