--- a/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner.helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     image:
       repository: quay.io/heubeck/examiner
       pullPolicy: IfNotPresent
-      tag: "1.6.4"
+      tag: "1.6.2"
     service:
       type: NodePort
       port: 80
@@ -42,7 +42,7 @@ spec:
     httpAnalysis:
       enabled: false
     configuration: 
-        ECHO_VALUE: ⛈ ARGO Rocks really🤘
-        SERVER_ERROR_RATE: 0
+        ECHO_VALUE: ⛈ ARGO Rocks not🤘
+        SERVER_ERROR_RATE: 90
         REQUEST_DELAY: 100..250
         FAILURE_LIMIT: 50%
