--- a/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
@@ -19,7 +19,9 @@ spec:
     ingress:
       enabled: true
       hosts: 
-        - unleash.test.local
-      path: /
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
+        - host: unleash.test.local
+          paths:
+            path: /
+            pathType: ImplementationSpecific
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
