Fixed ingress config

--- a/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/unleash.helm-release.yaml
@@ -23,6 +23,6 @@ spec:
       hosts: 
         - host: unleash.test.local
           paths:
-            path: /
-            pathType: ImplementationSpecific
+            - path: /
+              pathType: ImplementationSpecific
           
