--- a/clusters/argo-demo/helmreleases/keda.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/keda.helm-release.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: loki
-  namespace: loki
+  name: keda
+  namespace: keda
 spec:
   interval: 1m
   chart:
