--- a/clusters/argo-demo/helmreleases/redis.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis.helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 10m
   chart:
     spec:
-      chart: redis
+      chart: bitnami/redis
       version: 7.0.4
       sourceRef:
         kind: HelmRepository
