--- a/clusters/argo-demo/helmreleases/redis.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis.helm-release.yaml
@@ -8,8 +8,8 @@ spec:
   interval: 10m
   chart:
     spec:
-      chart: bitnami/redis
-      version: 7.0.4
+      chart: redis
+      version: 6.2.7
       sourceRef:
         kind: HelmRepository
         name: bitnami
