--- a/clusters/argo-demo/helmreleases/redis-runner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis-runner.helm-release.yaml
@@ -17,7 +17,7 @@ spec:
   values:
     redis:
       host: redis.redis
-      user:
-      port: 6379
-      password:
+      user: ''
+      port: '6379'
+      password: ''
       list: offboarding
