--- a/charts/redis-runner-dummy/templates/redis-runner.secret.yaml
+++ b/charts/redis-runner-dummy/templates/redis-runner.secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: redis-runner
 type: Opaque
 data:
-  REDIS_HOST: {{ .Values.redis.host | b64enc }}
-  REDIS_PORT: {{ required "Please specify redis.port" .Values.redis.port | b64enc }}
-  REDIS_PASSWORD: {{ .Values.redis.password | b64enc }}
-  REDIS_LIST: {{ required "Please specify redis.list" .Values.redis.list | b64enc }}
+  REDIS_HOST: {{ .Values.redis.host | b64enc | quote }}
+  REDIS_PORT: {{ required "Please specify redis.port" .Values.redis.port | b64enc | quote }}
+  REDIS_PASSWORD: {{ .Values.redis.password | b64enc | quote }}
+  REDIS_LIST: {{ required "Please specify redis.list" .Values.redis.list | b64enc | quote }}
