--- a/charts/redis-runner-dummy/templates/redis-runner.scaled-job.yaml
+++ b/charts/redis-runner-dummy/templates/redis-runner.scaled-job.yaml
@@ -30,7 +30,7 @@ spec:
   triggers:
     - type: redis
       metadata:
-        listName: {{ .Values.redis.list | quote }} # Required
+        listName: {{ required "Please specify redis.list" .Values.redis.list | quote }}
         listLength: "1" # Required
         enableTLS: "false" # optional
         databaseIndex: "0" # optional
