--- a/charts/redis-runner-dummy/templates/redis-runner.scaled-job.yaml
+++ b/charts/redis-runner-dummy/templates/redis-runner.scaled-job.yaml
@@ -21,7 +21,7 @@ spec:
   pollingInterval: 30                         # Optional. Default: 30 seconds
   successfulJobsHistoryLimit: 5               # Optional. Default: 100. How many completed jobs should be kept.
   failedJobsHistoryLimit: 5                   # Optional. Default: 100. How many failed jobs should be kept.
-  envSourceContainerName: {container-name}    # Optional. Default: .spec.JobTargetRef.template.spec.containers[0]
+  # envSourceContainerName: {container-name}    # Optional. Default: .spec.JobTargetRef.template.spec.containers[0]
   maxReplicaCount: 20                        # Optional. Default: 100
   scalingStrategy:
     strategy: "custom"                        # Optional. Default: default. Which Scaling Strategy to use. 
