--- a/clusters/argo-demo/helmreleases/redis-runner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis-runner.helm-release.yaml
@@ -16,7 +16,7 @@ spec:
   interval: 1m
   values:
     redis:
-      host: redis.redis
+      host: redis-master.redis
       user: ''
       port: '6379'
       password: ''
