--- a/clusters/argo-demo/helmreleases/redis.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis.helm-release.yaml
@@ -16,5 +16,5 @@ spec:
         namespace: flux-system
       interval: 10m
   values:
-    ALLOW_EMPTY_PASSWORD: yes
+    ALLOW_EMPTY_PASSWORD: 'yes'
     
