--- a/clusters/argo-demo/helmreleases/redis.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis.helm-release.yaml
@@ -1,20 +1,20 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: redis
-  namespace: redis
-spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: redis
-      version: 16.4.0
-      sourceRef:
-        kind: HelmRepository
-        name: bitnami
-        namespace: flux-system
-      interval: 10m
-  values:
-    ALLOW_EMPTY_PASSWORD: 'yes'
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: redis
+#   namespace: redis
+# spec:
+#   interval: 10m
+#   chart:
+#     spec:
+#       chart: redis
+#       version: 16.4.0
+#       sourceRef:
+#         kind: HelmRepository
+#         name: bitnami
+#         namespace: flux-system
+#       interval: 10m
+#   values:
+#     ALLOW_EMPTY_PASSWORD: 'yes'
     
