--- a/clusters/argo-demo/helmreleases/redis.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/redis.helm-release.yaml
@@ -16,5 +16,6 @@ spec:
         namespace: flux-system
       interval: 10m
   values:
-    ALLOW_EMPTY_PASSWORD: 'yes'
+    auth:
+      enabled: false
     
