--- a/clusters/argo-demo/helmreleases/teleport.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/teleport.helm-release.yaml
@@ -2,17 +2,17 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: redis
-  namespace: redis
+  name: teleport
+  namespace: teleport
 spec:
   interval: 10m
   chart:
     spec:
-      chart: redis
-      version: 16.4.0
+      chart: teleport-cluster
+      version: 10.2.1
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: teleport
         namespace: flux-system
       interval: 10m
   values:
