--- a/charts/examiner-bg/templates/service-active.yaml
+++ b/charts/examiner-bg/templates/service-active.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "name-stable" . }}
+  name: rollout-bluegreen-active
   namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
