--- a/charts/examiner-bg/templates/service-canary.yaml
+++ b/charts/examiner-bg/templates/service-canary.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "name-canary" . }}
+  name: rollout-bluegreen-preview
   namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
