--- a/charts/examiner-bg/templates/service.yaml
+++ b/charts/examiner-bg/templates/service.yaml
@@ -12,6 +12,6 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
-      nodePort: 30001
+      # nodePort: 30001
   selector:
     {{- include "selectorLabels" . | nindent 4 }}
