--- a/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/examiner-bg.helm-release.yaml
@@ -1,48 +1,48 @@
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: examiner-bg
-#   namespace: bg-demo
-# spec:
-#   releaseName: examiner
-#   chart:
-#     spec:
-#       chart: ./charts/examiner-bg
-#       sourceRef:
-#         kind: GitRepository
-#         name: flux-system
-#         namespace: flux-system
-#   interval: 1m
-#   values:
-#     replicaCount: 0
-#     image:
-#       repository: quay.io/heubeck/examiner
-#       pullPolicy: IfNotPresent
-#       tag: "1.6.0"
-#     service:
-#       type: ClusterIP
-#       port: 80
-#     container:
-#       port: 8080
-#     resources:
-#       limits:
-#         cpu: 100m
-#         memory: 128Mi
-#       requests:
-#         cpu: 100m
-#         memory: 128Mi
-#     autoscaling:
-#       enabled: true
-#       minReplicas: 3
-#       maxReplicas: 5
-#       targetCPUUtilizationPercentage: 80
-#     prometheusAnalysis:
-#       enabled: false
-#     httpAnalysis:
-#       enabled: true
-#     configuration: 
-#         ECHO_VALUE: ⛈ ARGO Rocks 🤘
-#         SERVER_ERROR_RATE: 100
-#         REQUEST_DELAY: 100..250
-#         FAILURE_LIMIT: 50%
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: examiner-bg
+  namespace: bg-demo
+spec:
+  releaseName: examiner
+  chart:
+    spec:
+      chart: ./charts/examiner-bg
+      sourceRef:
+        kind: GitRepository
+        name: flux-system
+        namespace: flux-system
+  interval: 1m
+  values:
+    replicaCount: 0
+    image:
+      repository: quay.io/heubeck/examiner
+      pullPolicy: IfNotPresent
+      tag: "1.6.0"
+    service:
+      type: ClusterIP
+      port: 80
+    container:
+      port: 8080
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+    autoscaling:
+      enabled: true
+      minReplicas: 3
+      maxReplicas: 5
+      targetCPUUtilizationPercentage: 80
+    prometheusAnalysis:
+      enabled: false
+    httpAnalysis:
+      enabled: true
+    configuration: 
+        ECHO_VALUE: ⛈ ARGO Rocks 🤘
+        SERVER_ERROR_RATE: 100
+        REQUEST_DELAY: 100..250
+        FAILURE_LIMIT: 50%
