--- a/clusters/argo-demo/service-monitors/ingress-nginx.service-monitor.yaml
+++ b/clusters/argo-demo/service-monitors/ingress-nginx.service-monitor.yaml
@@ -1,20 +1,20 @@
----
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  name: ingress-nginx-service-monitor
-  namespace: prometheus
-  labels:
-    app: ingress-nginx-service-monitor
-    namespace: prometheus
-spec:
-  endpoints:
-  - interval: 30s
-    path: /metrics
-    port: prometheus
-  namespaceSelector:
-    matchNames:
-    - ingress-nginx
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: ingress-nginx
+# ---
+# apiVersion: monitoring.coreos.com/v1
+# kind: ServiceMonitor
+# metadata:
+#   name: ingress-nginx-service-monitor
+#   namespace: prometheus
+#   labels:
+#     app: ingress-nginx-service-monitor
+#     namespace: prometheus
+# spec:
+#   endpoints:
+#   - interval: 30s
+#     path: /metrics
+#     port: prometheus
+#   namespaceSelector:
+#     matchNames:
+#     - ingress-nginx
+#   selector:
+#     matchLabels:
+#       app.kubernetes.io/name: ingress-nginx
