--- a/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/ingress-nginx.helm-release.yaml
@@ -1,35 +1,35 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: ingress-nginx
-  namespace: ingress-nginx
-spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: ingress-nginx
-      version: 4.2.1
-      sourceRef:
-        kind: HelmRepository
-        name: ingress-nginx
-        namespace: flux-system
-      interval: 1m
-  values:
-    controller:
-      replicaCount: 1
-      metrics:
-        enabled: true
-        serviceMonitor:
-          enabled: true
-        service:
-          annotations:
-            prometheus.io/port: "10254"
-            prometheus.io/scrape: "true"
-          ports:
-          - name: prometheus
-            port: 10254
-            protocol: TCP
-            targetPort: prometheus
-    prometheus:
-      create: true
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: ingress-nginx
+#   namespace: ingress-nginx
+# spec:
+#   interval: 10m
+#   chart:
+#     spec:
+#       chart: ingress-nginx
+#       version: 4.2.1
+#       sourceRef:
+#         kind: HelmRepository
+#         name: ingress-nginx
+#         namespace: flux-system
+#       interval: 1m
+#   values:
+#     controller:
+#       replicaCount: 1
+#       metrics:
+#         enabled: true
+#         serviceMonitor:
+#           enabled: true
+#         service:
+#           annotations:
+#             prometheus.io/port: "10254"
+#             prometheus.io/scrape: "true"
+#           ports:
+#           - name: prometheus
+#             port: 10254
+#             protocol: TCP
+#             targetPort: prometheus
+#     prometheus:
+#       create: true
