Added comment for rebuild

--- a/charts/time-runner-dummy/templates/time-runner.scaled-job.yaml
+++ b/charts/time-runner-dummy/templates/time-runner.scaled-job.yaml
@@ -32,4 +32,4 @@ spec:
         timezone: Europe/Berlin
         start: "* * * * *"
         end: "45 * * * *"
-        desiredReplicas: "10"
+        desiredReplicas: "10" #
