Fixed nats template

--- a/clusters/argo-demo/helmreleases/nats.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/nats.helm-release.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: argo-rollouts
-  namespace: argo-rollouts
+  name: nats
+  namespace: nats
 spec:
   interval: 10m
   chart:
