--- a/clusters/argo-demo/helmreleases/nats.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/nats.helm-release.yaml
@@ -9,10 +9,10 @@ spec:
   chart:
     spec:
       chart: nats
-      version: 7.5.10
+      version: 0.19.11
       sourceRef:
         kind: HelmRepository
-        name: bitnami
+        name: nats
         namespace: flux-system
       interval: 10m
   values:
