--- a/clusters/argo-demo/helmreleases/nats.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/nats.helm-release.yaml
@@ -16,8 +16,6 @@ spec:
         namespace: flux-system
       interval: 10m
   values:
-    installCRDs: true
-    dashboard:
-      enabled: false
-    jetstream:
-      enabled: true
+    nats:
+      jetstream:
+        enabled: true
