--- a/clusters/argo-demo/helmreleases/nats.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/nats.helm-release.yaml
@@ -1,21 +1,21 @@
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: nats
-  namespace: nats
-spec:
-  interval: 10m
-  chart:
-    spec:
-      chart: nats
-      version: 0.19.11
-      sourceRef:
-        kind: HelmRepository
-        name: nats
-        namespace: flux-system
-      interval: 10m
-  values:
-    nats:
-      jetstream:
-        enabled: true
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: nats
+#   namespace: nats
+# spec:
+#   interval: 10m
+#   chart:
+#     spec:
+#       chart: nats
+#       version: 0.19.11
+#       sourceRef:
+#         kind: HelmRepository
+#         name: nats
+#         namespace: flux-system
+#       interval: 10m
+#   values:
+#     nats:
+#       jetstream:
+#         enabled: true
