--- a/clusters/argo-demo/helmreleases/nats-runner.helm-release.yaml
+++ b/clusters/argo-demo/helmreleases/nats-runner.helm-release.yaml
@@ -1,18 +1,18 @@
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: nats-runner
-#   namespace: nats-runner
-# spec:
-#   releaseName: nats-runner
-#   chart:
-#     spec:
-#       chart: ./charts/nats-runner-dummy
-#       sourceRef:
-#         kind: GitRepository
-#         name: flux-system
-#         namespace: flux-system
-#   interval: 1m
-#   values:
-#   #changed
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: nats-runner
+  namespace: nats-runner
+spec:
+  releaseName: nats-runner
+  chart:
+    spec:
+      chart: ./charts/nats-runner-dummy
+      sourceRef:
+        kind: GitRepository
+        name: flux-system
+        namespace: flux-system
+  interval: 1m
+  values:
+  #changed
