--- a/charts/nats-runner-dummy/templates/nats-runner.scaled-job.yaml
+++ b/charts/nats-runner-dummy/templates/nats-runner.scaled-job.yaml
@@ -29,7 +29,7 @@ spec:
   triggers:
   - type: nats-jetstream
     metadata:
-      natsServerMonitoringEndpoint: "nats.nats:8222"
+      natsServerMonitoringEndpoint: "nats.nats.svc.cluster.local:8222"
       account: "$G"
       stream: "IMPORT"
       consumer: "KEDA"
