--- a/charts/nats-runner-dummy/templates/nats-runner.scaled-job.yaml
+++ b/charts/nats-runner-dummy/templates/nats-runner.scaled-job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nats-runner-job
 spec:
   jobTargetRef:
-    parallelism: 10                            # [max number of desired pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
+    parallelism: 1                            # [max number of desired pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
     completions: 1                            # [desired number of successfully finished pods](https://kubernetes.io/docs/concepts/workloads/controllers/jobs-run-to-completion/#controlling-parallelism)
     activeDeadlineSeconds: 600                #  Specifies the duration in seconds relative to the startTime that the job may be active before the system tries to terminate it; value must be positive integer
     backoffLimit: 5                           # Specifies the number of retries before marking this job failed. Defaults to 6
@@ -17,15 +17,25 @@ spec:
           imagePullPolicy: Always
           # envFrom:
           #   - secretRef: { name: nats-runner }
-  pollingInterval: 30                         # Optional. Default: 30 seconds
+  pollingInterval: 5                         # Optional. Default: 30 seconds
   successfulJobsHistoryLimit: 5               # Optional. Default: 100. How many completed jobs should be kept.
   failedJobsHistoryLimit: 5                   # Optional. Default: 100. How many failed jobs should be kept.
   # envSourceContainerName: {container-name}    # Optional. Default: .spec.JobTargetRef.template.spec.containers[0]
   maxReplicaCount: 25                        # Optional. Default: 100
+  ###Oldschool?
+  # scalingStrategy:
+  #   strategy: "custom"                        # Optional. Default: default. Which Scaling Strategy to use. 
+  #   customScalingQueueLengthDeduction: 1      # Optional. A parameter to optimize custom ScalingStrategy.
+  #   customScalingRunningJobPercentage: "0.5"  # Optional. A parameter to optimize custom ScalingStrategy.
   scalingStrategy:
     strategy: "custom"                        # Optional. Default: default. Which Scaling Strategy to use. 
     customScalingQueueLengthDeduction: 1      # Optional. A parameter to optimize custom ScalingStrategy.
     customScalingRunningJobPercentage: "0.5"  # Optional. A parameter to optimize custom ScalingStrategy.
+    pendingPodConditions:                     # Optional. A parameter to calculate pending job count per the specified pod conditions
+      - "Ready"
+      - "PodScheduled"
+      - "AnyOtherCustomPodCondition"
+    multipleScalersCalculation : "max" # Optional. Default: max. Specifies how to calculate the target metrics when multiple scalers are defined.
   triggers:
   - type: nats-jetstream
     metadata:
